# txnor-chess-ai

./: main.py  pyproject.toml
